--- a/package/src/assets/scss/style.scss
+++ b/package/src/assets/scss/style.scss
@@ -1,6 +1,8 @@
 @import "variables";
 
-@import "~bootstrap/scss/bootstrap";
-@import "~bootstrap-icons/font/bootstrap-icons.scss";
+/* Option 2: Import via CSS */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+@import "node_modules/bootstrap/scss/bootstrap";
+// @import "node_modules/bootstrap-icons/font/bootstrap-icons.scss";
 @import "./layout/sidebar";
 @import "./layout/container";
